--- a/src/App.css
+++ b/src/App.css
@@ -327,17 +327,22 @@ header ul .key {
   flex-direction: column;
   align-items: center;
 }
-.popup-content .closebtn {
-  margin-top: .5rem;
-}
-.closebtn {
-  background: #eee;
-  top: -13px;
-  right: -13px;
+
+.results {
+  width: 95%;
+  margin: auto;
 }
 
-.closebtn:hover {
-  background: #fff;
+.results-title {
+  border-bottom: #000 2px solid;
+  text-align: center;
+  margin: .25rem 0 .75rem 0;
+}
+
+.results-content {
+  margin: 0;
+  margin-left: 1.25rem;
+  font-size: 125%;
 }
 
 
