--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+/* Custom Properties */
+:root {
+  --border-color: #666;
+  --hover-color: #3a3a3a;
+  --bright-hover-color: #8c8c8c;
+  --text-color: #ddd;
+  --input-focus-color: #ddd;
+  --background-color: #2c2c2c;
+}
+
 /* General CSS */
 
 * {
@@ -12,23 +22,28 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
-  border: #808080 10px solid;
+  border: var(--border-color) 10px solid;
   border-top: none;
+  background-color: #2c2c2c;
 }
 
 #root {
   height: 100%;
 }
 
-input, button {
+input {
+  border: none;
+  border-bottom: #bbb .125em solid;
+  background-color: #333;
+  color: #ddd;
+  padding: .1em;
+  padding-left: .2em;
   outline: none;
 }
 
-input {
-  border: none;
-  border-bottom: #b3b3b3 .125em solid;
-  padding: .1em;
-  padding-left: .2em;
+input:focus {
+  border-bottom: var(--input-focus-color) .125em solid;
+  background-color: var(--hover-color);
 }
 
 /* 
@@ -41,31 +56,42 @@ button {
   background: transparent;
   font-size: 1.2rem;
   text-align: center;
+  font-size: 125%;
 }
 
 button:hover {
-  background: #d0d0d0;
+  background: var(--hover-color);
 }
 
 .delbtn:hover {
-  color: red
+  color: #f22;
+}
+
+.delbtn {
+  color: #d00;
 }
 
 .addbtn {
-  margin-left: .25em;
+  margin-left: .5em;
+  color: #0b0;
+}
+
+#root > .addbtn, .fin {
+  margin-top: .15rem;
 }
 
 .addbtn:hover {
-  color: #00cc00;
+  color: #0f0;
 }
 
 .fin {
   margin-bottom: 1em;
-  margin-left: .25em;
+  margin-left: .5em;
+  color: #aaa;
 }
 
 .fin:hover {
-  color: #0000ff;
+  color: #fff;
 }
 
 a {
@@ -78,7 +104,7 @@ a {
 
 header {
   display: flex;
-  background: #808080;
+  background: var(--border-color);
   height: 3.5rem;
   flex-direction: row;
   align-items: center;
@@ -132,15 +158,12 @@ header ul .key {
 }
 
 .btns a:hover {
-  background: #ddd;
-}
-
-.btns a fonta {
-  font-size: 400%;
+  background: var(--hover-color);
 }
 
 .btns a {
-  color: #333;
+  color: #ddd;
+  cursor: pointer;
 }
 
 /* 
@@ -151,7 +174,11 @@ header ul .key {
 
 .create-title, .create-author {
   margin-bottom: .5rem;
-  border-left: #b3b3b3 .125em solid;
+  border-left: #bbb .125em solid;
+}
+
+.create-title:focus, .create-answer:focus {
+  border-left: var(--input-focus-color) .125em solid;
 }
 
 .create-title {
@@ -192,6 +219,7 @@ header ul .key {
 
 .create-answers {
   width: 95%;
+  color: #bcbcbc
 }
 
 .create-answer {
@@ -211,7 +239,7 @@ header ul .key {
 
 #view-root {
   margin-left: .5rem;
-  color: #2c2c2c;
+  color: var(--text-color);
 }
 
 .view-title {
@@ -292,19 +320,19 @@ header ul .key {
   left: 0;
   height: 1.3em;
   width: 1.3em;
-  background-color: #fff;
-  border: #333 2px solid;
+  background-color: var(--background-color);
+  border: var(--text-color) 2px solid;
   border-radius: 50%;
 }
 
 /* On mouse-over, add a grey background color */
 .view-answer:hover input ~ .radio {
-  background-color: #999;
+  background-color: var(--bright-hover-color);
 }
 
 /* When the checkbox is checked, add a blue background */
 .view-answer input:checked ~ .radio {
-  background-color: #333;
+  background-color: var(--text-color);
 }
 
 .submit {
@@ -316,25 +344,14 @@ header ul .key {
   color: #0000ff;
 }
 
-/* ERR MODAL */
-
-.popup-content {
-  background: #f88 !important;
-  border: #f44 1px solid !important;
-  border-radius: 5px;
-  color: #c00;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .results {
   width: 95%;
   margin: auto;
+  color: var(--text-color);
 }
 
 .results-title {
-  border-bottom: #000 2px solid;
+  border-bottom: var(--text-color) 2px solid;
   text-align: center;
   margin: .25rem 0 .75rem 0;
 }
@@ -345,7 +362,28 @@ header ul .key {
   font-size: 125%;
 }
 
+#view-root > .fin {
+  margin-top: .25rem;
+  margin-left: 0; 
+}
 
+/* ERR MODAL */
 
+.popup-content {
+  background: #f88 !important;
+  border: #c00 2px solid !important;
+  border-radius: 5px;
+  color: #c00;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.popup-content button {
+  background-color: #f005
+}
 
+.popup-content button:hover{
+  background-color: #f00a
+}
